--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>JonChat04</artifactId>
+	<artifactId>KodeBanden</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JonChat04</name>
 	<description>JonChat04</description>
